# spikard

./: .biomeignore  .codecov.yml  .gh-actions-updater.toml  .gitattributes  .gitignore  .lychee.toml  .php-cs-fixer.cache  .pre-commit-config.yaml  .rumdl.toml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CI_FAILURES.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SETUP.md  Cargo.toml  GEM_VERIFICATION_REPORT.md  GRAPHQL_PROTOBUF_RESEARCH.md  GRPC_BINDING_ARCHITECTURE_REVIEW.md  GRPC_FFI_REVIEW_REPORT.md  GRPC_PHASE_5.2_IMPLEMENTATION.md  GRPC_TEST_COVERAGE_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  KREUZBERG_NAPI_PATTERNS.md  MIGRATION-0.2.1.md  MISSING_FEATURES.md  NEXT_SESSION.md  NODE_GRPC_STREAMING_IMPLEMENTATION.md  OPENAPI_ELIXIR_IMPLEMENTATION.md  PACKAGIST_VERIFICATION_v0.2.1.md  PHASE_5_4_SUMMARY.md  PHP_COVERAGE_GAPS_ANALYSIS.md  PHP_TEST_COMPLETION_REPORT.md  Package.swift  README.md  RELEASE_PHP_SUMMARY.md  (+33 more)
crates/spikard/: Cargo.toml  README.md
crates/spikard-alef/: Cargo.toml
crates/spikard-alef-ext/: Cargo.toml
crates/spikard-alef-ext/src/: config.rs  ir.rs  lib.rs
crates/spikard-alef/src/: main.rs
crates/spikard-bindings-shared/: CONFIG_EXTRACTION.md  Cargo.toml
crates/spikard-bindings-shared/examples/: config_extraction.rs
crates/spikard-bindings-shared/src/: config_extractor.rs  conversion_traits.rs  di_traits.rs  error_response.rs  grpc_metadata.rs  handler_base.rs  json_conversion.rs  lazy_cache.rs  lib.rs  lifecycle_base.rs  lifecycle_executor.rs  response_builder.rs  test_client_base.rs  validation_helpers.rs
crates/spikard-bindings-shared/tests/: README.md  comprehensive_coverage.rs  config_extractor_behavior.rs  error_response_edge_cases.rs  handler_base_integration.rs  integration_tests.rs
crates/spikard-cli/: Cargo.toml  README.md
crates/spikard-cli/src/: app.rs  cli.rs  lib.rs  main.rs
crates/spikard-cli/tests/: cli_asyncapi_smoke.rs  cli_binary_help.rs  cli_codegen_smoke.rs  cli_help_runs.rs  cli_help_test.rs  cli_inprocess_smoke.rs  cli_invalid_dto_selection.rs  cli_mcp_smoke.rs  cli_more_command_coverage.rs  cli_more_commands_smoke.rs  cli_smoke.rs  codegen_dto_tests.rs  codegen_engine_behavior.rs  codegen_engine_error_paths.rs  graphql_codegen_integration.rs  init_integration.rs  openapi_generator_behavior.rs  openapi_generator_trait_tests.rs  openrpc_codegen_behavior.rs  openrpc_handler_generation.rs  php_generator_tests.rs  test_python_generator_all.rs  test_python_generator_comprehensive.rs  ts_schema_tests.rs  typescript_topological_sort.rs
crates/spikard-codegen/: Cargo.toml  README.md
crates/spikard-codegen/src/: error.rs  graphql.rs  lib.rs
crates/spikard-codegen/tests/: from_fixtures_tests.rs  generator_smoke.rs  openapi_spec_roundtrip.rs
crates/spikard-core/: Cargo.toml  README.md
crates/spikard-core/src/: debug.rs  errors.rs  http.rs  lib.rs  lifecycle.rs  metadata.rs  panic.rs  parameters.rs  problem.rs  request_data.rs  router.rs  schema_registry.rs  type_hints.rs  validation.rs
crates/spikard-core/tests/: error_mapper.rs  parameters_full.rs  parameters_schema_and_formats.rs  request_data_roundtrip.rs
crates/spikard-e2e-http/: Cargo.toml
crates/spikard-e2e-http/src/: lib.rs
crates/spikard-elixir/: Cargo.toml  README.md
crates/spikard-elixir/src/: atoms.rs  conversion.rs  error.rs  handler.rs  lib.rs  lifecycle.rs  server.rs  service.ex  spikard.ex  testing.rs  websocket.rs
crates/spikard-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/spikard-ffi/cmake/: spikard-ffi-config.cmake
crates/spikard-ffi/examples/: test_config_deser.rs
crates/spikard-ffi/include/: spikard.h
crates/spikard-ffi/src/: lib.rs  lifecycle_ffi.rs  service.rs  test_client_ffi.rs
crates/spikard-graphql/: Cargo.toml  README.md
crates/spikard-graphql/src/: dynamic.rs  error.rs  executor.rs  handler.rs  lib.rs  routes.rs  schema.rs
crates/spikard-http/: Cargo.toml  README.md
crates/spikard-http/examples/: sse-notifications.rs  websocket-chat.rs
crates/spikard-http/src/: asyncapi.rs  auth.rs  background.rs  cors.rs  debug.rs  di_handler.rs  file_validator.rs  handler.rs  handler_response.rs  handler_trait.rs  handler_trait_tests.rs  lib.rs  lifecycle.rs  main.rs  middleware.rs  openapi.rs  parameters.rs  problem.rs  query_parser.rs  response.rs  router.rs  server.rs  sse.rs  testing.rs  validation.rs  websocket.rs
crates/spikard-http/tests/: asyncapi_endpoints_test.rs  auth_integration.rs  auth_tests.rs  background_behavior.rs  content_types_tests.rs  cors_tests.rs  di_handler_error_responses.rs  di_integration.rs  doc_snippets.rs  grpc_bidirectional_streaming.rs  grpc_client_streaming.rs  grpc_error_handling_test.rs  grpc_integration_test.rs  grpc_metadata_test.rs  grpc_server_integration.rs  grpc_server_streaming.rs  multipart_tests.rs  (+28 more)
crates/spikard-node/: Cargo.toml  FFI_INTEGRATION_TEST_PLAN.md  README.md  app.cjs  app.d.ts  config.d.ts  graphql.d.ts  index-wrapper.cjs  index-wrapper.js  package.json  pnpm-lock.yaml  service.cjs  service.js  service.ts  service_http_additions.ts
crates/spikard-php/: Cargo.toml  build.rs
crates/spikard-py/: Cargo.toml  GRAPHQL_BINDINGS.md  README.md  pyproject.toml
crates/spikard-rb/: Cargo.toml  README.md  build.rs  spikard.gemspec  test_load.rb
crates/spikard-rb-macros/: Cargo.toml
crates/spikard-wasm/: Cargo.toml  README.md  package.json
e2e/rust/: Cargo.toml  TEST_COVERAGE_REPORT.md
examples/di/: Cargo.toml  README.md  node_basic.js  node_basic.ts  python_basic.py  python_database.py  ruby_basic.rb  ruby_database.rb  rust_basic.rs
examples/rust-lifecycle-hooks/: Cargo.toml  README.md
tools/app-generator/: Cargo.toml
tools/benchmark-harness/: AUTOSTART_EXPLORATION.md  AUTOSTART_IMPLEMENTATION.md  AUTOSTART_README.md  BASELINE_PLAN.md  BENCHMARKS_TODO.md  BENCHMARK_RESULTS.md  Cargo.toml  README.md  VALIDATION_STATUS.md  WORKLOAD_IMPLEMENTATION_TODO.md  __init__.py  requirements.txt  visualize_benchmarks.py
tools/snippet-runner/: Cargo.toml
tools/test-generator/: Cargo.toml  README.md
(+6611 files in other folders)
