[workspace]
resolver = "2"
members = [
    "crates/spikard",
    "crates/spikard-cli",
    "crates/spikard-codegen",
    "crates/spikard-core",
    "crates/spikard-ffi",
    "crates/spikard-graphql",
    "crates/spikard-http",
    "crates/spikard-node",
    "crates/spikard-php",
    "crates/spikard-py",
    "crates/spikard-wasm",
    "tools/snippet-runner",
]
exclude = ["e2e/*", "examples/*", "packages/dart/rust", "test_apps/*"]

[workspace.package]
version = "0.14.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
homepage = "https://github.com/Goldziher/spikard"

[workspace.dependencies]

# HTTP dependencies
axum = "0.8"

# CLI dependencies
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
flate2 = { version = "1.1", default-features = false, features = [
    "rust_backend",
] }
http = "1.4"
jsonschema = { version = "0.46", default-features = false }
jsonwebtoken = { version = "10.3", features = ["use_pem", "rust_crypto"] }
prost = "0.14"
prost-types = "0.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Core library
spikard = { version = "0.14.0", path = "crates/spikard" }
spikard-core = { version = "0.14.0", path = "crates/spikard-core" }
spikard-graphql = { version = "0.14.0", path = "crates/spikard-graphql" }
spikard-http = { version = "0.14.0", path = "crates/spikard-http" }

# Utilities
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

# gRPC dependencies
tonic = { version = "0.14", features = ["transport", "codegen", "gzip"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = [
    "trace",
    "request-id",
    "compression-gzip",
    "compression-br",
    "timeout",
    "limit",
    "fs",
    "set-header",
    "sensitive-headers",
] }

# Middleware and auth
"tower_governor" = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
nursery = { level = "deny", priority = 0 }

[workspace.metadata.cargo-llvm-cov]
exclude = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
