[workspace]
resolver = "2"
members = [
    "crates/spikard",
    "crates/spikard-alef",
    "crates/spikard-alef-ext",
    "crates/spikard-cli",
    "crates/spikard-codegen",
    "crates/spikard-core",
    "crates/spikard-e2e-http",
    "crates/spikard-ffi",
    "crates/spikard-graphql",
    "crates/spikard-http",
    "crates/spikard-node",
    "crates/spikard-py",
    "crates/spikard-wasm",
    "packages/swift/rust",
]
exclude = [
    "crates/spikard-php",
    "e2e/*",
    "examples/*",
    "packages/dart/rust",
    "packages/elixir/native/spikard_nif",
    "packages/ruby/ext/spikard_rb/native",
    "test_apps/*",
]

[workspace.package]
version = "0.17.0-rc.3"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
homepage = "https://github.com/Goldziher/spikard"

[workspace.dependencies]

# HTTP dependencies
axum = "0.8"

base64 = "0.22"

# CLI dependencies
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
http = "1.4"
jsonschema = { version = "0.48", default-features = false }
jsonwebtoken = { version = "10.4", features = ["use_pem", "rust_crypto"] }
multer = "3"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Core library
spikard = { version = "0.17.0-rc.3", path = "crates/spikard" }
spikard-codegen = { version = "0.17.0-rc.3", path = "crates/spikard-codegen" }
spikard-core = { version = "0.17.0-rc.3", path = "crates/spikard-core" }
spikard-graphql = { version = "0.17.0-rc.3", path = "crates/spikard-graphql" }
spikard-http = { version = "0.17.0-rc.3", path = "crates/spikard-http" }

# Utilities
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

# gRPC dependencies
tonic = { version = "0.14", features = ["transport", "codegen", "gzip"] }
tower = "0.5"
tower-http = { version = "0.7.0", features = [
    "trace",
    "request-id",
    "compression-gzip",
    "compression-br",
    "timeout",
    "limit",
    "fs",
    "set-header",
    "sensitive-headers",
] }

# Middleware and auth
"tower_governor" = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
nursery = { level = "deny", priority = 0 }

[workspace.metadata.cargo-llvm-cov]
exclude = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
