[package]
name = "spikard-alef-ext"
version = "0.16.0-rc.1"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
description = "Alef HTTP extension for the spikard polyglot framework"
publish = false

[dependencies]
alef = { git = "https://github.com/kreuzberg-dev/alef", rev = "d81c74fc2df03edf65357214e1c54fc4e27a5360" }
anyhow = "1"
heck = "0.5"
minijinja = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
tracing = "0.1"

[lints]
workspace = true
