[package]
name = "spikard-alef"
version = "0.16.0-rc.3"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
description = "Alef CLI for spikard — registers the HTTP extension and delegates to alef"
publish = false

[[bin]]
name = "spikard-alef"
path = "src/main.rs"

[dependencies]
alef = { git = "https://github.com/kreuzberg-dev/alef", tag = "v0.25.58" }
spikard-alef-ext = { path = "../spikard-alef-ext" }

[lints]
workspace = true
