[package]
name = "spikard-alef"
version = "0.16.0-rc.4"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
description = "Alef CLI for spikard — registers the HTTP extension and delegates to alef"
publish = false

[[bin]]
name = "spikard-alef"
path = "src/main.rs"

[dependencies]
alef = { git = "https://github.com/xberg-io/alef", tag = "v0.30.9" }
spikard-alef-ext = { path = "../spikard-alef-ext" }
spikard-e2e-http = { path = "../spikard-e2e-http" }

[lints]
workspace = true
