[package]
name = "spikard-bindings-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "ext-php-rs",
    "magnus",
    "napi",
    "napi-derive",
    "pyo3",
    "pyo3-async-runtimes",
    "serde",
]

[features]
default = []
python-support = ["pyo3", "pyo3-async-runtimes"]
node-support = ["napi", "napi-derive"]
ruby-support = ["magnus"]
php-support = ["ext-php-rs"]

[dependencies]
axum.workspace = true
bytes = "1.11"
http.workspace = true
http-body-util = "0.1"
serde = { workspace = true }
serde_json.workspace = true
simd-json = "0.17"
spikard-core = { workspace = true, features = ["di"] }
spikard-http = { workspace = true, features = ["di"] }
thiserror.workspace = true
tokio.workspace = true
tonic = "0.14"
tracing.workspace = true

[dependencies.ext-php-rs]
version = "0.15"
optional = true

[dependencies.magnus]
version = "0.8.2"
optional = true

[dependencies.napi]
version = "3"
optional = true
default-features = false
features = ["napi9", "async"]

[dependencies.napi-derive]
version = "3"
optional = true

[dependencies.pyo3]
version = "0.28"
optional = true
features = ["abi3-py310"]

[dependencies.pyo3-async-runtimes]
version = "0.28"
optional = true
features = ["tokio-runtime"]

[dev-dependencies]
pretty_assertions = "1.4"

[lints]
workspace = true
