[package]
name = "spikard-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for building and validating Spikard applications"
keywords = ["cli", "http", "api", "codegen", "validation"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/spikard-cli"
readme = "README.md"

[[bin]]
name = "spikard"
path = "src/main.rs"

[lib]
name = "spikard_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
spikard.workspace = true
spikard-http = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
anyhow = "1.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp = { version = "1.3.0", features = ["client", "transport-io"], optional = true }
serde-saphyr = "0.0.23"
openapiv3 = "2.2"
asyncapiv3 = "0.1.3"                # AsyncAPI v3 spec parsing
graphql-parser = "0.4"              # GraphQL SDL parsing
prost = "0.14"                      # Protocol Buffers runtime
prost-types = "0.14"                # Protocol Buffers well-known types
prost-reflect = "0.16"              # Protocol Buffers reflection
protox = "0.9"                      # Protocol Buffers compilation
heck = "0.5"                        # For case conversion (snake_case, PascalCase)
tempfile = "3.27"                   # For quality validation temporary files

# Optional language-specific dependencies
pyo3 = { workspace = true, optional = true }
_spikard = { package = "spikard-py", version = "0.13.0", path = "../spikard-py", optional = true, default-features = false }

[features]
default = ["mcp"]
python = ["dep:pyo3", "dep:_spikard", "pyo3/auto-initialize"]
node = []                                                     # Reserved feature flag for Node CLI integrations
ruby = []                                                     # Reserved feature flag for Ruby CLI integrations
mcp = ["dep:rmcp"]
mcp-http = ["mcp", "rmcp/transport-streamable-http-server"]
all = ["python", "node", "ruby", "mcp", "mcp-http"]

[dev-dependencies]
tempfile = "3.27"
assert_cmd = "2.2"
predicates = "3.1"

[package.metadata.cargo-machete]
ignored = [
  "_spikard",
  "clap_complete",
  "clap_mangen",
  "prost",
  "prost-reflect",
  "prost-types",
  "protox",
  "pyo3",
]
