[package]
name = "spikard-codegen"
version = "0.3.1"
edition.workspace = true
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "Code generation and configuration management for Spikard"
keywords = ["codegen", "code-generation", "openapi", "asyncapi", "schema"]
categories = ["development-tools", "development-tools::code-generators"]
documentation = "https://docs.rs/spikard-codegen"
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
homepage = "https://github.com/Goldziher/spikard"
readme = "README.md"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Template engine
handlebars = "6.3"
tera = "1.20"

# JSON Schema
jsonschema = "0.37"
schemars = "1.1"

# Utilities
indexmap = { version = "2.12", features = ["serde"] }
regex = "1.12"

[dev-dependencies]
insta = "1.44"  # For snapshot testing
tempfile = "3.23"

[features]
default = []
# Enable all generators
full = ["python", "typescript", "rust", "openapi"]
python = []
typescript = []
rust = []
openapi = []
