[package]
name = "spikard-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation utilities for Spikard"
documentation = "https://docs.rs/spikard-codegen"

[dependencies]
indexmap = { version = "2.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[lints]
workspace = true
