[package]
name = "spikard-e2e-http"
version = "0.17.0-rc.4"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
description = "Alef e2e HTTP test-generation extension for the spikard polyglot framework"
publish = false

# serde is used only through its derive macro (`#[derive(Serialize)]` in
# streaming/accessors.rs); cargo-machete does not detect derive-only usage.
[package.metadata.cargo-machete]
ignored = ["serde"]

[dependencies]
alef = { git = "https://github.com/xberg-io/alef", tag = "v0.38.2" }
anyhow = "1"
heck = "0.5"
minijinja = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
