[package]
name = "spikard-ffi"
version = "0.15.6-rc.22"
edition = "2021"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["framework", "http", "polyglot", "rust", "web"]
categories = []
repository = "https://github.com/Goldziher/spikard"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
ahash = "0.8"
serde_json = "1"
spikard = { path = "../spikard", version = "0.15.6-rc.22", features = ["di"] }
spikard-core = { path = "../spikard-core", version = "0.15.6-rc.22" }
spikard-graphql = { path = "../spikard-graphql", version = "0.15.6-rc.22" }
spikard-http = { path = "../spikard-http", version = "0.15.6-rc.22" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
