[package]
name = "spikard-graphql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GraphQL support for Spikard with async-graphql integration"
keywords = ["graphql", "async-graphql", "server", "api"]
categories = ["web-programming::http-server", "web-programming"]
documentation = "https://docs.rs/spikard-graphql"
readme = "README.md"

[package.metadata.cargo-machete]
ignored = ["bytes", "futures", "spikard-core", "tower", "tracing"]

[features]
default = []
subscription = []

[dependencies]
async-graphql = "7"
axum = { version = "0.8" }
bytes = "1.11"
futures = "0.3"
http.workspace = true
serde.workspace = true
serde_json.workspace = true
spikard-core = { workspace = true }
spikard-http = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
doc-comment = "0.3"
tokio-test = "0.4"

[lints]
workspace = true
