[package]
name = "spikard-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server for spikard"

[dependencies]
spikard.workspace = true
axum = { workspace = true, features = ["multipart", "ws"] }
tokio.workspace = true
tokio-util = "0.7"
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
jsonwebtoken.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-redoc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = "0.3"
futures = "0.3"
jsonschema = "0.33"
serde_qs = "0.15"
lazy_static = "1.5"
regex = "1"
rustc-hash = "2.1"
urlencoding = "2.1"
mime = "0.3"
jiff = "0.2"
uuid = "1.18"
bytes = "1.10"
http-body-util = "0.1"
http-body = "1.0"
axum-test = { version = "18", features = ["ws"] }
anyhow = "1.0"
cookie = "0.18"
base64 = "0.22.1"
flate2 = "1.1"
brotli = "8.0"

[dev-dependencies]
chrono = "0.4"
