[package]
name = "spikard-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance HTTP server for Spikard with tower-http middleware stack"
keywords = ["http", "server", "axum", "tower", "middleware"]
categories = ["web-programming::http-server", "web-programming"]
documentation = "https://docs.rs/spikard-http"
readme = "README.md"

[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "h2",
    "http-body",
    "jiff",
    "prost",
    "prost-types",
    "tokio-stream",
    "utoipa-redoc",
    "utoipa-swagger-ui",
]

[features]
default = []
di = ["spikard-core/di"]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
axum = { workspace = true, features = ["multipart", "ws"] }
axum-test = { version = "20", features = ["ws"] }
brotli = "8.0"
bytes = "1.11"
cookie = "0.18"
flate2.workspace = true
futures = "0.3"
futures-util = "0.3"
h2 = "0.4"
http-body = "1.0"
http-body-util = "0.1"
jiff = "0.2"
jsonschema.workspace = true
jsonwebtoken.workspace = true
lazy_static = "1.5"
lru = "0.16"
mime = "0.3"
prost = "0.14"
prost-types = "0.14"
regex = "1"
rustc-hash = "2.1"
serde.workspace = true
serde_json.workspace = true
serde_qs = "1.1"
spikard-core.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport", "codegen", "gzip"] }
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5"
urlencoding = "2.1"
utoipa.workspace = true
utoipa-redoc.workspace = true
utoipa-swagger-ui.workspace = true
uuid = "1.23"

[dev-dependencies]
chrono = "0.4"
doc-comment = "0.3"
tempfile = "3.27"

[lints]
workspace = true
